fixed android animate.css bug and added custom scrollbar

--- a/src/index.sass
+++ b/src/index.sass
@@ -19,6 +19,15 @@ $mobile-padding: 25px
 
 //  ============= common styles ===========
 
+* 
+  -webkit-tap-highlight-color: transparent
+  &::-webkit-scrollbar 
+    width: 12px
+  &::-webkit-scrollbar-track 
+    background: rgba(0, 0, 0, .1)
+  &::-webkit-scrollbar-thumb 
+    background-color: #1E555C
+
 .button
   padding: 10px 20px
   color: $first-col
